# MagicCube

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
block/: CMakeLists.txt
client/: CMakeLists.txt
client_test/: CMakeLists.txt
cmake/: FindASIO.cmake  FindGLM.cmake
resource/res/shader/: Simple2DTexture.f  Simple2DTexture.v  Simple3DTexture.shader  Simple3DTexture.v
server/: CMakeLists.txt
src/: ClientMain.cpp
src/block/: BlockAir.h  BlockGrass.h  BlockList.cpp  BlockList.h  IBlock.h  IBlockCube.h
src/client/: Application.cpp  Application.h  ClientChunk.cpp  ClientChunk.h  GameClient.cpp  GameClient.h  IScene.h  Resource.cpp  Resource.h  SceneGame.cpp  SceneGame.h  SceneInit.cpp  SceneInit.h  SceneMainMenu.cpp  SceneMainMenu.h  Test.cpp
src/client_test/: ClientTest.cpp
src/server/: Chunk.cpp  Chunk.h  GameServer.cpp  GameServer.h
src/server/NetPackage/: NetPackageBase.h  NetPackageChunk.h  NetPackageClientCommand.h  NetPackageServerCommand.h  NetPackageShakehand.h
src/util/: Net.cpp  Net.h  NetPackage.h  NetPackageBase.h  Task.h  TaskList.cpp  TaskList.h  TaskQueue.h
util/: CMakeLists.txt
